# Gcode_parser

./: LICENSE  README.md  pyproject.toml
docs/: PLAN.md  program_registry.md  variables.md
examples/: 01_basic_line_arc.nc  02_macro_sum.nc  03_g65_macro_call.nc  04_g32_g90_g92_g94.nc  05_g71_g70_roughing_and_finishing.nc  06_g73_pattern_repeat.nc  07_g74_g75_grooving.nc  08_g76_threading.nc  ignore_example.txt
gcode_sim/: __init__.py  ast_nodes.py  cli.py  errors.py  expression.py  gui.py  ignore_config.py  interpreter.py  lexer.py  motion.py  parser.py  program_registry.py  simulator.py  tool_table.py  toolpath.py  units.py  variables.py  viz_matplotlib.py
gcode_sim/canned_cycles/: __init__.py  contour.py  grooving.py  pattern_repeat.py  roughing.py  threading.py  turning.py
tests/: test_canned_cycles.py  test_compound_cycles.py  test_control_flow.py  test_expression.py  test_grooving_cycles.py  test_ignore_config.py  test_interpolation.py  test_lexer.py  test_macro_call.py  test_threading_cycle.py  test_variables.py
